[gd_scene load_steps=3 format=3 uid="uid://ui7fvswog7yp"]

[ext_resource type="Script" uid="uid://cq6nc1t743p6t" path="res://scenes/Menus/MainMenu/main_menu.gd" id="1_grof6"]
[ext_resource type="Theme" uid="uid://bxlt2ju7qgrqv" path="res://theme.tres" id="2_theme"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("new_game", "load_game", "options", "quit_game")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_grof6")
new_game = NodePath("VBoxContainer/NewGameButton")
load_game = NodePath("VBoxContainer/LoadGameButton")
options = NodePath("VBoxContainer/OptionsButton")
quit_game = NodePath("VBoxContainer/QuitGameButton")

[node name="Background" type="ColorRect" parent="."]
z_index = -99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -120.5
offset_right = 100.0
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Guild Idle Prototype"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "Load Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "Quit Game"
